# agentrs

./: .env_example  .gitignore  Cargo.toml  LICENSE  README.md
crates/agentrs/: Cargo.toml
crates/agentrs-agents/: Cargo.toml
crates/agentrs-agents/src/: builder.rs  lib.rs  runner.rs
crates/agentrs-core/: Cargo.toml
crates/agentrs-core/src/: error.rs  lib.rs  streaming.rs  testing.rs  types.rs
crates/agentrs-llm/: Cargo.toml
crates/agentrs-llm/src/: lib.rs  registry.rs
crates/agentrs-llm/src/anthropic/: mod.rs
crates/agentrs-llm/src/azureopenai/: mod.rs
crates/agentrs-llm/src/gemini/: mod.rs
crates/agentrs-llm/src/ollama/: mod.rs
crates/agentrs-llm/src/openai/: mod.rs
crates/agentrs-macros/: Cargo.toml
crates/agentrs-macros/src/: lib.rs
crates/agentrs-mcp/: Cargo.toml
crates/agentrs-mcp/src/: adapter.rs  client.rs  lib.rs  protocol.rs
crates/agentrs-memory/: Cargo.toml
crates/agentrs-memory/src/: in_memory.rs  lib.rs  redis_backend.rs  sliding_window.rs  token_aware.rs  vector.rs
crates/agentrs-multi/: Cargo.toml
crates/agentrs-multi/src/: communication.rs  graph.rs  lib.rs  orchestrator.rs  shared_memory.rs
crates/agentrs-tools/: Cargo.toml
crates/agentrs-tools/src/: builtin.rs  lib.rs  registry.rs
crates/agentrs/src/: config.rs  lib.rs  prelude.rs
examples/: mcp_integration.rs  multi_agent.rs  simple_agent.rs  streaming.rs  tool_use.rs  yaml_multi_agent.rs  yaml_runtime.rs  yaml_single_agent.rs
examples/configs/: runtime-agent.yaml
tests/: integration_test.rs
