[package]
name = "agentrs-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Agent builders and execution loops for agentrs"

[dependencies]
agentrs-core = { path = "../agentrs-core" }
agentrs-memory = { path = "../agentrs-memory" }
agentrs-tools = { path = "../agentrs-tools" }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
