[package]
name = "agentrs-agents"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergio Ricardo de Sousa"]
repository = "https://github.com/sergio-r-sousa/agentrs"
rust-version = "1.78"
description = "Agent builders and execution loops for agentrs"

[dependencies]
agentrs-core = { version = "0.1.0", path = "../agentrs-core" }
agentrs-memory = { version = "0.1.0", path = "../agentrs-memory" }
agentrs-tools = { version = "0.1.0", path = "../agentrs-tools" }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
