[package]
name = "agentrs-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergio Ricardo de Sousa"]
repository = "https://github.com/sergio-r-sousa/agentrs"
rust-version = "1.78"
description = "Core traits, types, and errors for agentrs"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
