[package]
name = "agentrs-llm"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergio Ricardo de Sousa"]
repository = "https://github.com/sergio-r-sousa/agentrs"
rust-version = "1.78"
description = "Provider-agnostic LLM implementations for agentrs"

[features]
default = []
openai = ["dep:reqwest"]
azureopenai = ["dep:reqwest"]
anthropic = ["dep:reqwest"]
ollama = ["openai"]
gemini = ["dep:reqwest"]

[dependencies]
agentrs-core = { version = "0.1.0", path = "../agentrs-core" }
async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
