[package]
name = "agentrs-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergio Ricardo de Sousa"]
repository = "https://github.com/sergio-r-sousa/agentrs"
rust-version = "1.78"
description = "Procedural macros for agentrs"

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
