[package]
name = "agentrs-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Memory backends for agentrs"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
agentrs-core = { path = "../agentrs-core" }
async-trait = { workspace = true }
futures = { workspace = true }
redis = { workspace = true, optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
