[package]
name = "agentrs-memory"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergio Ricardo de Sousa"]
repository = "https://github.com/sergio-r-sousa/agentrs"
rust-version = "1.78"
description = "Memory backends for agentrs"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
agentrs-core = { version = "0.1.0", path = "../agentrs-core" }
async-trait = { workspace = true }
futures = { workspace = true }
redis = { workspace = true, optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
