[package]
name = "agentrs-multi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Multi-agent orchestration for agentrs"

[dependencies]
agentrs-core = { path = "../agentrs-core" }
agentrs-agents = { path = "../agentrs-agents" }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
