[package]
name = "agentrs-multi"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergio Ricardo de Sousa"]
repository = "https://github.com/sergio-r-sousa/agentrs"
rust-version = "1.78"
description = "Multi-agent orchestration for agentrs"

[dependencies]
agentrs-core = { version = "0.1.0", path = "../agentrs-core" }
agentrs-agents = { version = "0.1.0", path = "../agentrs-agents" }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
