[package]
name = "agentrs-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Tooling primitives and built-in tools for agentrs"

[features]
default = ["fetch", "search", "filesystem", "mcp"]
fetch = []
search = []
filesystem = []
bash = []
python = []
mcp = ["dep:agentrs-mcp"]

[dependencies]
agentrs-core = { path = "../agentrs-core" }
agentrs-macros = { path = "../agentrs-macros" }
agentrs-mcp = { path = "../agentrs-mcp", optional = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
