[package]
name = "agentrs-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Sergio Ricardo de Sousa"]
repository = "https://github.com/sergio-r-sousa/agentrs"
rust-version = "1.78"
description = "Tooling primitives and built-in tools for agentrs"

[features]
default = ["fetch", "search", "filesystem", "mcp"]
fetch = []
search = []
filesystem = []
bash = []
python = []
mcp = ["dep:agentrs-mcp"]

[dependencies]
agentrs-core = { version = "0.1.0", path = "../agentrs-core" }
agentrs-macros = { version = "0.1.0", path = "../agentrs-macros" }
agentrs-mcp = { version = "0.1.0", path = "../agentrs-mcp", optional = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
